Removed ex staff/members who are long gone, updated the main page logo and removed curseforge scanning stuff

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,4 @@
+title: Minecraft Mod Development
+description: Our little space for modding documentation!
+show_downloads: false
 theme: jekyll-theme-slate
